--- a/src/app.css
+++ b/src/app.css
@@ -92,7 +92,11 @@
   }
 
   .nav-button {
-    @apply btn btn-primary btn-md rounded-3xl px-4 py-1 text-xl;
+    @apply btn btn-primary btn-soft btn-md rounded-3xl px-4 py-1 text-xl;
+  }
+
+  .add-bot-btn {
+    @apply btn btn-primary btn-soft btn-lg min-w-40 rounded-4xl px-3 text-xl;
   }
 
   .mobile-menu {
