--- a/src/app.css
+++ b/src/app.css
@@ -77,6 +77,12 @@
   ::-webkit-scrollbar-thumb:hover {
     background-color: var(--dc-blurple);
   }
+
+  p {
+    a {
+      margin-right: 2px;
+    }
+  }
 }
 
 @layer components {
